--- a/.github/workflows/random-gif.yml
+++ b/.github/workflows/random-gif.yml
@@ -13,24 +13,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Escolher GIF aleatório
+      - name: Definir próximo GIF
         run: |
           # Lista de GIFs
           GIFS=("https://media.tenor.com/zZ2o8_ONLlRAAAA/jojo-fortnite.gif" \
                 "https://media.tenor.com/9qvRhTR47joAAAAS/shadow-dio-jjba.gif" \
                 "https://media.tenor.com/zVj0tqzt_MAAAC/touhou-sakuya-floss.gif")
 
-          # Número aleatório entre 1 e 100
-          RANDOM_NUM=$((RANDOM % 100 + 1))
+          # Arquivo que salva o índice do último GIF usado
+          INDEX_FILE=".github/workflows/last_gif_index.txt"
 
-          if [ $RANDOM_NUM -le 33 ]; then
-            RANDOM_GIF=${GIFS[0]}   # 33%
-          elif [ $RANDOM_NUM -le 66 ]; then
-            RANDOM_GIF=${GIFS[1]}   # 33%
-          else
-            RANDOM_GIF=${GIFS[2]}   # 34%
+          # Se o arquivo não existir, começamos do 0
+          if [ ! -f "$INDEX_FILE" ]; then
+            echo "0" > "$INDEX_FILE"
           fi
 
+          # Lê o índice atual
+          INDEX=$(cat "$INDEX_FILE")
+
+          # Calcula o próximo índice (0 → 1 → 2 → 0 → 1 → 2 ...)
+          NEXT_INDEX=$(( (INDEX + 1) % ${#GIFS[@]} ))
+
+          # Salva o próximo índice para a próxima execução
+          echo "$NEXT_INDEX" > "$INDEX_FILE"
+
+          # Define o GIF escolhido
+          RANDOM_GIF=${GIFS[$NEXT_INDEX]}
           echo "GIF_ESCOLHIDO=$RANDOM_GIF" >> $GITHUB_ENV
 
       - name: Atualizar README com o GIF escolhido
@@ -41,6 +49,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Atualizando GIF aleatório no README"
+          git add README.md .github/workflows/last_gif_index.txt
+          git commit -m "Atualizando GIF do README"
           git push
