--- a/.github/workflows/random-gif.yml
+++ b/.github/workflows/random-gif.yml
@@ -3,7 +3,7 @@ name: Random GIF in README
 on:
   schedule:
     - cron: "0 */6 * * *" # Executa a cada 6 horas
-  workflow_dispatch: # Permite rodar manualmente
+  workflow_dispatch:
 
 jobs:
   update-gif:
@@ -20,35 +20,34 @@ jobs:
                 "https://media.tenor.com/9qvRhTR47joAAAAj/shadow-dio-jjba.gif" \
                 "https://media.tenor.com/zVj0tqzt_MAAAC/touhou-sakuya-floss.gif")
 
-          # Arquivo que salva o índice do último GIF usado
+          # Lê índice do último commit (ou inicia com 0)
           INDEX_FILE=".github/workflows/last_gif_index.txt"
-
-          # Se o arquivo não existir, cria com índice 0
-          if [ ! -f "$INDEX_FILE" ]; then
-            echo "0" > "$INDEX_FILE"
+          if [ -f "$INDEX_FILE" ]; then
+            INDEX=$(cat "$INDEX_FILE")
+          else
+            INDEX=0
           fi
 
-          # Lê o índice atual
-          INDEX=$(cat "$INDEX_FILE")
+          # Define o GIF atual
+          GIF_ESCOLHIDO=${GIFS[$INDEX]}
+          echo "GIF_ESCOLHIDO=$GIF_ESCOLHIDO" >> $GITHUB_ENV
 
-          # Define o GIF atual baseado no índice salvo
-          RANDOM_GIF=${GIFS[$INDEX]}
-          echo "GIF_ESCOLHIDO=$RANDOM_GIF" >> $GITHUB_ENV
-
-          # Calcula o próximo índice (0 → 1 → 2 → 0 → 1 → 2 ...)
+          # Próximo índice
           NEXT_INDEX=$(( (INDEX + 1) % ${#GIFS[@]} ))
-
-          # Salva o próximo índice para a próxima execução
           echo "$NEXT_INDEX" > "$INDEX_FILE"
 
-      - name: Atualizar README com o GIF escolhido
+      - name: Atualizar README
         run: |
           sed -i "s|<img src=\"https://media\.tenor\.com/[^\"]*\" height=\"160\" style=\"margin-bottom: 10px;\" />|<img src=\"$GIF_ESCOLHIDO\" height=\"160\" style=\"margin-bottom: 10px;\" />|" README.md
 
-      - name: Commit e Push das alterações
+      - name: Commit e Push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md .github/workflows/last_gif_index.txt
-          git commit -m "Atualizando GIF do README"
-          git push
+          if git diff --cached --quiet; then
+            echo "Nenhuma alteração detectada, não será feito commit."
+          else
+            git commit -m "Atualizando GIF do README"
+            git push
+          fi
